# nao-e-so-reta

./: .gitignore  Dockerfile  Makefile  README.md  app.py  build_graph.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: graph.graphml
docs/: arquitetura.md  deploy.md  matematica.md  metodologia_experimentos.md
notebooks/: 01_ciclo_basico_terminal.ipynb  02_estatistica_10k_pontos.ipynb  README.md  estudo_10k_pontos.ipynb  estudo_barao_geraldo.ipynb
notebooks/results/: p_grid_results.csv  results_10000_pairs.csv  sampled_pairs.csv  summary_metric_errors.csv  tortuosity_summary.csv
results/: caso_pontual_metricas.csv  p_grid_results.csv  sampled_pairs.csv  summary_metric_errors.csv
scripts/: build_graph.py  calibrate_place.py
src/nao_e_so_reta/: __init__.py  analysis.py  config.py  graph_io.py  norms.py  plots.py  projections.py  routing.py  sampling.py  ui_text.py  visualization.py
src/nao_e_so_reta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
temp_codes_ruas/: estudo_10k_pontos.ipynb  estudo_barao_geraldo.ipynb  street_metrics.py
tests/: test_analysis.py  test_norms.py  test_sampling.py
